Fix error pages gap

--- a/frontend/src/pages/Errors/ErrorsPage.module.scss
+++ b/frontend/src/pages/Errors/ErrorsPage.module.scss
@@ -1,7 +1,6 @@
 .errorsBody {
     column-gap: 30px;
     display: grid;
-    gap: 0 0;
     grid-template-areas: '. Left-Panel Center-Panel Right-Panel .';
     grid-template-columns: auto 300px minmax(200px, 700px) 300px auto;
     height: 100%;
